# eyes-break

./: .prettierignore  LICENSE  README.md  angular.json  cleanup.sh  doc.txt  package-lock.json  package.json
.github/workflows/: build.yml
public/i18n/: en.json  es.json
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  session.rs
src-tauri/src/enums/: error.rs
src-tauri/tests/: session_test.rs  timer_update_test.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/components/: app.component.ts
src/app/components/home/: home.component.html  home.component.scss  home.component.ts
src/app/components/progress/: progress.component.html  progress.component.scss  progress.component.ts
src/app/components/setting/: setting.component.html  setting.component.scss  setting.component.ts
src/app/config/: app.config.ts  transloco.config.ts
src/app/directives/: click-outside-directive.directive.ts
src/app/home/: home.component.html  home.component.scss  home.component.ts
src/app/models/: available-lang.model.ts  session-conf.model.ts  state-session.model.ts
src/app/progress/: progress.component.ts
src/app/services/: app-settings.service.ts  audio-manager.service.ts  notification.service.ts  provider-services.ts  tauri.service.ts  timer.service.ts  translation.service.ts  transloco-loader.service.ts
src/app/tokens/: app-settings.token.ts  session-config.token.ts
(+2 files in other folders)
