[package]
name = "app"
version = "0.0.0-RC8"
description = "A Tauri App"
authors = ["Ruben Lupate <ruben.lupate.c@gmail.com>"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
thiserror = "2.0.12"
